--- a/.github/workflows/file.yml
+++ b/.github/workflows/file.yml
@@ -1,4 +1,4 @@
-name: Upload screenshot
+name: Upload artifact
 on:
   workflow_dispatch:
   push:
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: karol-brejna-i/webpage-screenshot-action@v1
         with:
-          url: http://ww7.6d-vision.com/scene-labeling?usid=19&utid=19069741812
+          url: https://m.youtube.com
           output: web.png
           
       - uses: karol-brejna-i/webpage-screenshot-action@v1
@@ -26,9 +26,7 @@ jobs:
           output: ip2.png
           mode: page
           
-      - run: mkdir web && cd web
-      - run: wget --wait=2 --level=inf --limit-rate=20K --recursive --page-requisites --user-agent=Mozilla --no-parent --convert-links --adjust-extension --no-clobber -e robots=off http://www.6d-vision.com
-      - run: cd ..
+      - run: wget https://www.youtube.com
       
       - name: 'Tar files'
         run: tar -cvzf file.tar.gz *
@@ -36,7 +34,7 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: simple-screenshot
+          name: my-artifact
           path: file.tar.gz  #${{ github.workspace }}/*.png
           compression-level: 9 # maximum compression
           retention-days: 2
